# surge_HTS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compass_artifact_wf-fa3dc234-e64c-4b24-9de0-ff17b19171f9_text_markdown.md  docker-compose.yml  pyproject.toml
.claude/: launch.json  ralph-loop.local.md
.github/workflows/: daily-pipeline.yml
docs/: DASHBOARD.md  DATA_BRANCH.md  DATA_SOURCES.md  DEPLOYMENT.md  DUEL.md  MIGRATION_GITHUB_ACTIONS.md  OPERATIONS.md  TRADING.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: surge.json
scripts/: setup_scheduled_tasks.ps1  surge_daily.ps1  surge_kr_daily.ps1
src/surge/: __init__.py  cache.py  cli.py  config.py  daily.py  db.py  eval.py  features.py  learn.py  pgbackend.py  pipeline.py  quality.py  reversion.py  schema.sql  scoring.py  verdict.py
src/surge/backtest/: __init__.py  data.py  engine.py  metrics.py  strategy.py  (+1 more)
tests/: test_adaptive.py  test_attention.py  test_backtest.py  test_blindspot.py  test_cache.py  test_daily.py  test_dashboard.py  test_db.py  test_discipline.py  test_duel.py  test_eval.py  test_export.py  test_factors.py  test_features.py  test_gapanalysis.py  test_kr_factors.py  test_krx.py  test_learn.py  test_llm_news.py  test_pgbackend.py  test_pipeline.py  test_policy.py  test_quality.py  test_quotes.py  test_reversion.py  test_riskguard.py  test_rotation.py  test_scoring.py  test_sec.py  test_trading_debate_kill.py  test_trading_execution.py  test_trading_risk.py  test_variants.py  test_verdict.py  test_verify.py  test_volstate.py  test_watch.py
(+54 files in other folders)
