[project]
name = "surge"
version = "0.1.0"
description = "US next-day surge (+100%) prediction — daily feature-snapshot archive & prediction pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "lxml>=5.0",          # yfinance earnings-date scrape (US core); absent ⇒
                          # fetch_corporate fails on every symbol (158× log spam)
]

[project.optional-dependencies]
pg = ["psycopg[binary]>=3.1"]
llm = ["anthropic>=0.39"]
redis = ["redis>=5.0"]
# Korean market (rotation module): both keyless for OHLCV/listings; investor
# flows + short balance via pykrx additionally need a free KRX data account.
kr = ["finance-datareader>=0.9", "pykrx>=1.0", "setuptools>=70,<81"]

[project.scripts]
surge = "surge.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/surge"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
